# pybr20-discord

./: Pipfile  Procfile  README.md  local.env  pyproject.toml
config/: dev.toml  prod.toml
pybrbot/: __main__.py
pybrbot/discord/: __init__.py  calendar.py  commands.py  config.py  messages.py  utils.py
