[tool.poetry]
name = "pythonbrasilbot"
version = "0.1.0"
description = ""
authors = ["Marco Rougeth <marco@rougeth.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.5.1"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
ipython = "^7.18.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
